# openarmx_teleop_bridge

./: README.md
openarmx_teleop_bridge/: follower_bridge_node.py  mini_leader_node.py  mini_udp_sender.py
remote_control/Mini/: README.md
remote_control/Mini/stable_v1/docs/: DEBUG_SUMMARY_2026-07-10.md  MIGRATION_CHECKLIST.md  SOP_新设备首日联调_一页版.md
remote_control/Mini/stable_v1/openarmx_teleop_bridge/: README.md  package.xml  setup.cfg  setup.py
remote_control/Mini/stable_v1/openarmx_teleop_bridge/launch/: mini_to_openarmx_bimanual.launch.py  mini_to_openarmx_single.launch.py
remote_control/Mini/stable_v1/openarmx_teleop_bridge/openarmx_teleop_bridge/: mini_udp_sender_bimanual.py
remote_control/Mini/stable_v1/openarmx_teleop_bridge/scripts/: README.md  start_bridge.sh  start_follower.sh  start_sender.sh  status.sh  stop_all.sh
scripts/: start_bridge.sh  start_follower.sh  start_sender.sh  status.sh
