<?xml version="1.0"?>
<package format="3">
  <name>openarmx_teleop_bridge</name>
  <version>0.0.1</version>
  <description>ROS2 bridge from LeRobot OpenArm Mini leader to OpenArmX follower controllers.</description>
  <maintainer email="will@example.com">will</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
